# backend

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  Dockerfile.linux  Dockerfile.windows  README.md  config.py  entrypoint.ps1  requirements.txt
.github/workflows/: dev.yml  docker-build.yml  docker-pr-build.yml  engd2026.yml  pytest.yml  pytest_uv.yml  test.yml
app/: __init__.py  blueprint.py
app/factory/export_factory/: ExportExcel.py  ExportHelper.py
app/models/: AudioFile.py  Auralization.py  Material.py  Model.py  Simulation.py  SimulationRun.py  Task.py
app/models/data/: deeponet_default_settings.json  simulation_settings.json
app/output/: output.json
app/routes/: auralization.py  file.py  geometry.py  material.py  model.py  receive.py
app/schemas/: auralization_schema.py  file_schema.py  geometry_schema.py  material_schema.py  mesh_schema.py  model_schema.py  project_schema.py  simulation_schema.py
app/services/: auralization_service.py  discovery_service.py  geometry_diagnostic_log_service.py  geometry_export_service.py  geometry_inspection_service.py  geometry_parsing_service.py  geometry_repair_service.py  geometry_service.py  material_service.py  model_service.py  project_service.py  setting_service.py  simulation_service.py
app/simulation-backend/: methods-config.json
app/types/: Resource.py  Task.py  __init__.py
app/utils/: geometry_utils.py  geometry_validation_utils.py
docs/source/: index.rst
example_settings/: de_setting.json  deism_setting.json  dg_setting.json  don_setting.json
gunicorn/: gunicorn_config.py
simulation-backend/: pyproject.toml
simulation-backend/simulation_backend/: DEinterface.py  DEinterfaceOld.py  DGinterface.py  DeepONetInterface.py  DeismInterface.py  __init__.py  configSingleParam_ARG_RIR.yml  pyroomacoustics_interface.py
simulation-backend/simulation_backend/headless_backend/: HelperFunctions.py
simulation-backend/simulation_backend/headless_backend/input/: MeasurementRoom.msh  MeasurementRoom_uuids.geo  exampleInput_DG.json  exampleInput_DeepONet.json  exampleInput_Deism.json  exampleInput_deeponet_acoustics.json
simulation-backend/simulation_backend/headless_backend/input_deeponet/: deeponet_setup.json
simulation-backend/simulation_backend/headless_backend/input_deeponet/cube_6ppw/: settings.json
simulation-backend/simulation_backend/headless_backend/input_deeponet/val_data/src0/: simulation_parameters.json
tests/: cloud_executor_test.py  local_executor_test.py
tests/acousticDE/: test_acousticDE.py  test_input_acousticDE.json
tests/edg-acoustics/: test_edg_acoustics.py  test_input_edg_acoustics.json
tests/integration/: test_cloud_executor.py  test_cloud_executor_final.py  test_combined_improved.py  test_executor_factory.py  test_local_executor.py  test_local_executor_final.py  test_missing_cases.py  test_missing_final_cases.py
tests/pyroomacoustics/: test_pyroomacoustics_backend.py
tests/unit/: __init__.py
(+133 files in other folders)
