[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation_backend"
version = "0.1.0"
description = "Simulation backend"

requires-python = ">=3.10,<3.12"

dependencies = [
    'alembic==1.10.2',
    'amqp==5.2.0',
    'celery==5.4.0',
    'click==8.1.3',
    'click-didyoumean==0.3.1',
    'click-plugins==1.1.1',
    'click-repl==0.3.0',
    'coverage==7.2.7', # explicitly imported
    'debugpy==1.6.4',
    'docutils==0.21.2',
    'eventlet==0.36.1', # Discouraged for use now, but seems to be used within celery
    'executing==1.2.0',
    'Flask==2.2.5', # explicitly imported
    'Flask-Cors==3.0.10', # explicitly imported
    'Flask-JWT-Extended==4.4.4', # explicitly imported
    'Flask-Migrate==4.0.4', # explicitly imported
    'Flask-Script==2.0.5',
    'flask-smorest==0.40.0', # explicitly imported
    'Flask-SQLAlchemy==3.0.3',
    'gmsh==4.13.1', # explicitly imported (in simulation service)
    'gunicorn==20.1.0',
    'Jinja2==3.1.2',
    'marshmallow==3.19.0', # explicitly imported
    'nodeenv==1.9.1',
    'openpyxl==3.1.5',
    'numpy',
    'pandas',
    'parso==0.8.3',
    'passlib==1.7.4', # explicitly imported
    'pre-commit==3.8.0',
    'psycopg2-binary==2.9.6',
    'PyJWT==2.6.0',
    'python-dotenv==1.0.0', # explicitly imported
    'pytz==2023.3', # explicitly imported (dependency)
    'rhino3dm==8.6.1', # explicitly imported (Mesh handling)
    'scipy==1.14.0', # explicitly imported
    'soundfile==0.13.1', # explicitly imported (for auralization service)
    'trimesh==4.4.1', # explicitly imported   (ObjConversion, Mesh handling)
    'tzdata==2023.3',
    'Werkzeug==2.2.3', # explicitly imported (auralization service)
    'locust',
    'ezdxf', # explicitly imported (for DXF file handling, Mesh handling)
]

[project.optional-dependencies]

de = [
    'acousticDE @ git+https://github.com/Building-acoustics-TU-Eindhoven/acousticDE.git@d32afb2498e27bd996fc7356d57dc4f1ed76aa44#egg=acousticDE',
]

dg = [
    'edg-acoustics @ git+https://github.com/Building-acoustics-TU-Eindhoven/edg-acoustics.git@08cac98da98ed14ba1366741b1c0644001503b82#egg=edg-acoustics',
]

pyroomacoustics = [
    'pyroomacoustics==0.8.4',
]

backends = [
    'simulation_backend[de,dg,pyroomacoustics]',
]

docs = [
    'Sphinx==7.3.7',
    'sphinxcontrib-applehelp==1.0.8',
    'sphinxcontrib-devhelp==1.0.6',
    'sphinxcontrib-htmlhelp==2.0.5',
    'sphinxcontrib-jsmath==1.0.1',
    'sphinxcontrib-qthelp==1.0.7',
    'sphinxcontrib-serializinghtml==1.1.10',
    'pydata-sphinx-theme',
    'myst_parser',
    'sphinx-design',
    'sphinx-copybutton',
    'sphinx-gallery',
    'matplotlib',
    'alabaster==0.7.16',
]

tests = [
    'pytest',
    'coverage==7.2.7',
    'black==25.1.0',
    'isort==5.12.0',
    'flake8==6.1.0',
    'pycodestyle==2.11.1',
    'pyflakes==3.1.0',
]
